[package]
name = "secret-gen"
version = "0.1.0"
description = "Command-line password/passphrase generator."
edition = "2021"
rust-version = "1.65"
homepage = "https://github.com/clementi/secret"
repository = "https://github.com/clementi/secret"
license = "MIT"
readme = "README.md"
keywords = ["command-line", "password", "passphrase", "generator"]
categories = ["command-line-utilities"]

[[bin]]
name = "secret"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
config = "0.13.3"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
